--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,6 @@ html, body {
 
 .parent {
     padding: 5px;
-    margin-left: 19px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -62,7 +61,7 @@ body {
     background-color: whitesmoke
 }
 
-.left-column {
+.center-column {
     flex-direction: column;
     flex: 75%;
     height: 100%;
@@ -94,6 +93,14 @@ body {
 .w3-input {
     background-color: #f5f5f5;
     float:right;
-    width:97%;
+    margin:0px;
+    padding:0px;
+    width:100%;
+    font-size: 35px;
     text-decoration: none;
+    text-align:center;
+}
+
+.spacer {
+    margin: 5px;
 }
